unpackaged/main/default/objects/InsuranceDocumentMaster__c/InsuranceDocumentMaster__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Insurance Document Master</label>
</CustomObject>