unpackaged/main/default/objects/InsuranceDocumentMaster__c/fields/Formats__c.field-meta.xml
<CustomField>
    <fullName>Formats__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Formats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>