unpackaged/main/default/objects/InsuranceDocumentMaster__c/fields/Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Label_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>